# EthercatDrone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Concept.md  Copilot-Agent-Code-Quality-Guidelines.md  README.md  build.sh  copilot-instructions.md  current-todo.md
cmake/: aarch64-linux-gnu.cmake
config/default/: demo_mission.json
config/shared/: hardware_catalog.json
deploy/: ethercatdrone.service  setup.sh
deploy/config/default/: hardware.json
docs/: AnalysisUpdateDirective.md  Overview.md  WBS1.1-Implementation-Plan.md  WBS1.1-OverviewAddendum.md  WBS1.1.md  WBS1.2.md  WBS1.3.md  WBS1.md  WBS2.md  WBS3.md  draft-Model.scad  draftDrone.stl
scripts/: deploy.sh
scripts/linux/: install-deps.sh
src/common/: CMakeLists.txt
src/common/include/common/config/: Config.h
src/common/include/common/log/: ILogSink.h  LogHelper.h  Logger.h
src/common/include/common/log/sinks/: ConsoleSink.h  FileSink.h  LogStreamSink.h
src/common/include/common/math/: Math.h
src/common/include/common/menu/: ConfigDisplayPanel.h  Console.h  CycleTimePanel.h  MainMenu.h  MenuPanel.h  PdoMappingPanel.h  SimulatedEntryPanel.h
src/common/include/common/messages/: Message.h  MessageTypes.h
src/common/include/common/rt/: SignalProcess.h  ThreadBuffer.h  Threadrunner.h  VectorBuffer.h
src/common/src/config/: Config.cpp
src/common/src/log/: Logger.cpp
src/common/src/log/sinks/: ConsoleSink.cpp  FileSink.cpp  LogStreamSink.cpp
src/common/src/menu/: ConfigDisplayPanel.cpp  CycleTimePanel.cpp  MainMenu.cpp  PdoMappingPanel.cpp  SimulatedEntryPanel.cpp
src/common/src/messages/: Message.cpp
src/common/src/rt/: Threadrunner.cpp
src/flight_controller/: CMakeLists.txt
src/flight_controller/include/fc/app/: Application.h  FunctionEvaluator.h  Queue.h  WrapperPool.h
src/flight_controller/include/fc/ethercat/: EthercatAdapter.h  HardwareCatalog.h  SlaveTypeInfo.h
src/flight_controller/include/fc/gpio/: BoardVariant.h  GPIOAdapter.h
src/flight_controller/include/fc/grpc/: GrpcAdapter.h  GrpcResultMessage.h  GrpcTriggerMessage.h  GrpcWrapper.h
src/flight_controller/include/fc/i2c/: I2CAdapter.h
src/flight_controller/include/fc/mission/: FlightLeg.h  MissionEvaluator.h  MissionQueue.h  MissionStatePDO.h
src/flight_controller/include/fc/motor/: MotorController.h
src/flight_controller/include/fc/pdo/: HardwareRegistry.h  IHardwareAdapter.h  MachineStatePDO.h  PDO.h
src/flight_controller/include/fc/redundancy/: RedundancyController.h
src/flight_controller/include/fc/safety/: AlwaysOnEval.h  LineMonitor.h  MachineStateController.h  RulesEvalData.h
src/flight_controller/include/fc/services/: GrpcService.h
src/flight_controller/include/fc/simulated/: SimulatedAdapter.h
src/flight_controller/include/fc/spi/: SPIAdapter.h
src/flight_controller/include/fc/wrapper/: AnalogInputWrapper.h  AnalogOutputWrapper.h  BarometerWrapper.h  DigitalInputWrapper.h  DigitalOutputWrapper.h  GPSWrapper.h  IMUWrapper.h  MagnetometerWrapper.h  MessageWrappers.h
src/flight_controller/src/app/: Application.cpp  FunctionEvaluator.cpp  Queue.cpp
src/flight_controller/src/ethercat/: EthercatAdapter.cpp  HardwareCatalog.cpp  kSlaveTypes.cpp
src/flight_controller/src/gpio/: BoardVariant.cpp  GPIOAdapter.cpp
src/flight_controller/src/grpc/: GrpcAdapter.cpp  GrpcWrapper.cpp
src/flight_controller/src/i2c/: I2CAdapter.cpp
src/flight_controller/src/mission/: MissionEvaluator.cpp  MissionQueue.cpp  MissionStatePDO.cpp
src/flight_controller/src/motor/: MotorController.cpp
src/flight_controller/src/pdo/: HardwareRegistry.cpp  MachineStatePDO.cpp  PDO.cpp
src/flight_controller/src/redundancy/: RedundancyController.cpp
src/flight_controller/src/safety/: AlwaysOnEval.cpp  LineMonitor.cpp  MachineStateController.cpp  RulesEvalData.cpp
src/flight_controller/src/services/: ConfigServiceImpl.cpp  GrpcService.cpp
src/flight_controller/src/services/proto/: config_service.proto  log_service.proto  mission_service.proto  station_service.proto
src/flight_controller/src/simulated/: SimulatedAdapter.cpp
src/flight_controller/src/spi/: SPIAdapter.cpp
src/imu/: CMakeLists.txt
src/imu/include/imu/: ImuCalibration.h  ImuReader.h  ImuTypes.h
src/imu/src/: ImuCalibration.cpp  ImuReader.cpp
src/main/: CMakeLists.txt
src/main/src/: bench_test.cpp  drone_app.cpp  mission_bench_test.cpp
src/navi/: CMakeLists.txt
src/navi/src/: navi_stub.cpp
tests/: CMakeLists.txt
tests/src/: test_common.cpp  test_fc.cpp  test_imu.cpp
